--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -29,4 +29,4 @@ jobs:
         STUID: ${{ secrets.Stuid }}
         PASSWORD: ${{ secrets.Password }}
       run: |
-        python report.py data.json "$STUID" "$PASSWORD"
+        python report.py data_west.json "$STUID" "$PASSWORD"
